# meta-ads-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: security.yml
src/meta_ads_mcp_cloudrun/: auth.py  config.py  main.py  meta_client.py
src/meta_ads_mcp_cloudrun/tools/: README.md  read_tools.py  register.py
tests/: test_config.py
